--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,35 @@
         </div>
     </main>
 
+    <!-- Modal para editar usuário -->
+    <div id="editUserModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Editar Usuário</h3>
+            <form id="editUserForm">
+                <input type="hidden" id="editUserId">
+                <div class="form-group">
+                    <label for="editUsername">Nome de Usuário:</label>
+                    <input type="text" id="editUsername" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="editEmail">Email:</label>
+                    <input type="email" id="editEmail" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="editPrivateKey">Token do Cliente:</label>
+                    <input type="text" id="editPrivateKey" readonly>
+                    <button type="button" class="btn btn-secondary" onclick="copyToClipboard('editPrivateKey')">Copiar</button>
+                </div>
+                <div class="form-group">
+                    <label for="editMonthlyLimit">Limite Mensal:</label>
+                    <input type="number" id="editMonthlyLimit" min="1" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+            </form>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
